# unity-

./: LICENSE  My3DGame_Final.apk  My3DGame_HQ.apk  README.md
My3DGame/: buildozer.spec  export_presets.cfg  project.godot
My3DGame/scenes/: Main.tscn
My3DGame_Android/: gradlew  settings.gradle
My3DGame_Android/app/: build.gradle
My3DGame_Android/app/src/main/: AndroidManifest.xml
My3DGame_Android/app/src/main/java/com/mycompany/my3dgame/: MainActivity.java
My3DGame_Android/app/src/main/res/values/: strings.xml
MyAndroidGame/: README.md  build_android.sh  build_local.sh
MyAndroidGame/Assets/Editor/: AndroidBuildScript.cs
MyAndroidGame/Assets/Scripts/: Collectible.cs  GameManager.cs  PlayerController.cs
jni/: Android.mk  Application.mk
jni/App/: Main.cpp  classes.dex  classes_dex.h  dobby.h  imguijni.cpp  log.h
jni/ImGui/: imguiSimpleToast.hpp
libs/ImGui/include/: imgui.i
libs/openssl/include/openssl/: configuration.h
modules/common/include/: egl_hook.h
modules/common/src/: egl_hook.cpp  gl_bindless_renderer.cpp
modules/imguiexpand/include/: ImGuiInputIME.h  ImGuiKeyboard.h  ImGuiTools.h  styles.h
modules/imguiexpand/src/: ImGuiMultiTouch.cpp
modules/native/include/: dex_loader.h  native_register_vk.h  vulkan_helper.h
modules/native/java/: ImGui.java  ImGuiToolsHelper.java  VulkanView.java  classes_dex.h
modules/native/src/: jvm_helper.cpp  native_register_vk.cpp
modules/ui/include/: gui.h
modules/unitymatrix/include/: Matrix4x4.hpp  Unity.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
ref_project/jni/: Android.mk  Application.mk  main.cpp
unity-hook/: CMakeLists.txt  build.bat  build.sh  version.map
unity-hook/libs/ImGui/include/: imguiSimpleToast.hpp
unity-hook/modules/KittyMemory/include/: KittyMemory.h
unity-hook/modules/KittyMemory/src/: KittyMemory.cpp
unity-hook/modules/common/include/: ImGuiDraw.h  gl_bindless_renderer.h
unity-hook/modules/common/src/: Main.cpp
unity-hook/modules/imguiexpand/include/: CircularButton.h  ImGuiMultiTouch.h
unity-hook/modules/imguiexpand/src/: CircularButton.cpp  ImGuiInputIME.cpp  ImGuiKeyboard.cpp  ImGuiTools.cpp
unity-hook/modules/log/include/: logger.h
unity-hook/modules/log/src/: logger.cpp
unity-hook/modules/native/include/: jvm_helper.h
unity-hook/modules/native/java/: IMEHelper.java
unity-hook/modules/native/src/: dex_loader.cpp  native_register_vk.cpp  vulkan_helper.cpp
unity-hook/modules/ui/src/: gui.cpp
unity-hook/modules/unitymatrix/include/: Matrix3x3.hpp  Quaternion.hpp
unity-hook/modules/xhook/src/: xh_util.c
